<resources>
    <string name="init_activity" translatable="false">com.opsigo.travelaja.LoginActivity</string>
    <string name="login_activity_filter" translatable="false">com.opsigo.travelaja.AddressActivity</string>
    <string name="redirectUriIdaman" translatable="false">com.opsicorp.dtm:/oauth2callback</string>
    <string name="app_name">Opsicorp</string>
    <string name="map" translatable="false">AIzaSyB1KjdguRy_PjJH9EHrf9I1WUc0-EPVJ_c</string>
    <string name="SENDER_ID">772022917842</string>
    <string name="notifications_admin_channel_name">Shirohige</string>
    <string name="notifications_admin_channel_description">Shiro Firebase PushNotification</string>
    <string name="label_title">The U.S. is a country of 50 states covering a vast swath of North America, with Alaska in the northwest and Hawaii extending the nation’s presence into the Pacific Ocean. Major Atlantic Coast cities are New York, a global finance and culture center, and capital Washington, DC. Midwestern metropolis Chicago is known for influential architecture and on the west coast, Los Angeles Hollywood is famed for filmmaking.The U.S. is a country of 50 states covering a vast swath of North America, with Alaska in the northwest and Hawaii extending the nation’s presence into the Pacific Ocean. Major Atlantic Coast cities are New York, a global finance and culture center, and capital Washington, DC. Midwestern metropolis Chicago is known for influential architecture and on the west coast, Los Angeles Hollywood is famed for filmmaking.</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>
    <string name="language">Language</string>
    <string name="system_language">System Language (default)</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="used_language">English</string>
    <string name="english">English</string>
    <string name="opsicorp_url">Travel Corporate URL</string>
    <string name="address_info">This is the address you use to sign in.</string>
    <string name="total_tripplan">Total Trip Plan</string>
    <string name="travel_expense_detail">Travel Expense Detail</string>
    <string name="applying_language">Applying Language Change . . .</string>
    <string name="upcoming_trip">Upcoming Trip</string>
    <string name="special_promo">Special Promo</string>
    <string name="find_flights">Find Flights</string>
    <string name="search_flights">Search Flight</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="not_comply">Not Comply</string>
    <string name="conflict">Conflict</string>
    <string name="continue_">Continue</string>
    <string name="airlines">Airlines</string>
    <string name="airlines_preferences">Airlines Preferences</string>
    <string name="no_preference">No Preference</string>
    <string name="help">Help</string>
    <string name="string_help_text"> The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="quit">Exit App</string>
    <string name="string_choose_image_">Select Image to Upload</string>
    <string name="string_unable_to_pick_image">Unable to Pickup Image</string>
    <string name="string_unable_to_load_image">Unable to Load Image</string>
    <string name="string_reselect">Click on Image to Reselect</string>
    <string name="opsicorp_splash">Opsicorp Splash</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_information_caps">CONTACT INFORMATION</string>
    <string name="attachment_files_">Attachment Files : </string>
    <string name="add_attachment">+ Add Attachment</string>
    <string name="pdf_file">PDF File</string>
    <string name="image_file">Image File</string>
    <string name="departure_date">Departure Date</string>
    <string name="return_date">Return Date</string>
    <string name="departure_time">Departure Time</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="i_agree">I Agree</string>
    <string name="say_hello">Hi </string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reason_code">Reason Code</string>
    <string name="reject">Reject</string>
    <string name="reject_all">Reject All</string>
    <string name="approve">Approve</string>
    <string name="approve_all">Approve All</string>
    <string name="this_month">This Month</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="partially_rejected">Partially Rejected</string>
    <string name="partially_approved">Partially Approved</string>
    <string name="list_of_your_approval">List of your Approval</string>
    <string name="see_all">See All</string>
    <string name="time_limit">Time Limit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="passengers">Select Passengers</string>
    <string name="select_payment">Select Payment</string>
    <string name="checkout">Checkout</string>
    <string name="flights">Flights</string>
    <string name="flights_summary">Flights Summary</string>
    <string name="trains">Trains</string>
    <string name="trains_summary">Trains Summary</string>
    <string name="hotel_summary">Hotel Summary</string>
    <string name="hotels">Hotels</string>
    <string name="train">Train</string>
    <string name="string_title_please_wait">Please wait for a while...</string>
    <string name="trip_participant">Trip Participant</string>
    <string name="trip_items">Trip Items</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="no_logout">NO</string>
    <string name="yes_logout">Yes</string>
    <string name="do_u_want_to_approve_all">Do you confirm to approve all item?</string>
    <string name="participant">Participant</string>
    <string name="participant_status">Participant Status</string>
    <string name="allowance">Allowance</string>
    <string name="allowance_daily">Allowance Daily</string>
    <string name="allowance_transport">Allowance Transport</string>
    <string name="allowance_meal">Allowance Meal</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="trip_plan_status">Trip Plan Status</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="approval">Approval</string>
    <string name="trip_code">Trip Code</string>
    <string name="created_date">Created Date :</string>
    <string name="created_by">Created By</string>
    <string name="expire_in">Expires in</string>
    <string name="detail">Detail</string>
    <string name="detail_information">Detail Information</string>
    <string name="detail_tripplan">Detail Trip Plan</string>
    <string name="detail_tripitem">Detail Trip Item</string>
    <string name="detail_participant">Detail Participant</string>
    <string name="add_trip_item">Add Trip Item</string>
    <string name="book">Book</string>
    <string name="book_now">Book Now</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
    <string name="submit">Submit</string>
    <string name="do_u_want_submit_tp">Do you want to Submit Trip Plan ?</string>
    <string name="add_more_cart">Add more cart</string>
    <string name="submited">Submited</string>
    <string name="what_is_your_purpose">What is your purpose</string>
    <string name="purpose">Purpose</string>
    <string name="create_tripplan">Create Trip Plan</string>
    <string name="select_accomodation">Select Accommodation</string>
    <string name="select_all">Select All</string>
    <string name="select_for_accomodation">Select For Accommodation</string>
    <string name="select_your_budget">Select your budget</string>
    <string name="select_budget">Select Budget</string>
    <string name="select_cost_center">Select Cost Center</string>
    <string name="choose_your_reason_code">Choose you reason code</string>
    <string name="budget">Budget</string>
    <string name="approver">Approver</string>
    <string name="cost_center">Cost Center</string>
    <string name="notes">Notes</string>
    <string name="create_now">Create Now</string>
    <string name="sorry">Sorry</string>
    <string name="please_upload_your_doc">Please upload your document</string>
    <string name="please_fill_event_name">Please fill event name</string>
    <string name="departing_flights_found">Departing Flights Found</string>
    <string name="returning_flights_found">Returning Flights Found</string>
    <string name="select_departing_flight">Select Departing Flight</string>
    <string name="select_returning_flight">Select Returning Flight</string>
    <string name="detail_departing_flight">Detail Departing Flight</string>
    <string name="detail_returning_flight">Detail Returning Flight</string>
    <string name="my_transaction">My Transaction</string>
    <string name="personal_information">Personal Information</string>
    <string name="location">Location</string>
    <string name="faq_help">FAQ</string>
    <string name="business_trip">Business</string>
    <string name="personal_trip">Personal Trip</string>
    <string name="choose_your_trip">Choose Your Trip</string>
    <string name="family_time">Family Time</string>
    <string name="upcoming_flights">Upcoming Flights</string>
    <string name="show_more">Show More</string>
    <string name="show_detail">Show Detail</string>
    <string name="hide_detail">Hide Detail</string>
    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="close">Close</string>
    <string name="ok"> OK </string>
    <string name="next">Next</string>
    <string name="flightRoute">CGK - KNO</string>
    <string name="change">Change</string>
    <string name="selectedSsr"><![CDATA[Fried Rice & Sausage, Mac & Cheese]]></string>
    <string name="txt_enjoy_the_new_exprience">Enjoy the new experince Personal Trip with \n Corporate policy benefits!</string>
    <string name="txt_flight">Flight</string>
    <string name="txt_train">Train</string>
    <string name="txt_hotel">Hotel</string>
    <string name="txt_updated_information_for">Updated information for Flight, Hotel and Train during Covid-19 pandemic.</string>
    <string name="txt_read_more">Read More</string>
    <string name="txt_important_notice">Important Notice !</string>
    <string name="txt_wonderful_indonesia">Wonderful Indonesia</string>
    <string name="txt_recommendations_guide_for_travel">Recommendations guide for travel destination</string>
    <string name="please_fill_all_trip_information_below">Please fill all trip information below.</string>
    <string name="txt_whoops">Whoops!</string>
    <string name="sorry_for_your_inconvinience">Sorry for your inconvinience</string>
    <string name="this_feature_is_under_construction">This feature is under construction</string>
    <string name="create_reimburstment">Create Reimbursement</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_trip_code">Select Trip Code</string>
    <string name="contact_hr">You don\'t have Approver yet right now.<br>Please contact your HR Management!</br></string>
    <string name="sorry2">Sorry..</string>
    <string name="message_tripcode_already_used">Your trip code already used in draft reimbursement.</string>
    <string name="check_now">Check Now</string>
</resources>