<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.mobile.travelaja.module.settlement.viewmodel.SettlementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        tools:context=".module.settlement.view.CreateSettlementFragment">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="67dp"
            android:background="#e0e0e1"
            app:layout_goneMarginTop="16dp"
            app:layout_goneMarginLeft="20dp"/>

        <TextView
            android:id="@+id/tvCreateRemb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            style="@style/TextButtonStyle"
            android:text="@string/create_reimburstment"/>
        <TextView
            android:id="@+id/tvLabelCreate"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tvCreateRemb"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout_Label"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateRemb"
            android:text="@string/please_fill_all_trip_information_below"/>

        <TextView
            android:id="@+id/labelBank"
            style="@style/ContentDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintLeft_toLeftOf="@+id/etBank"
            android:layout_marginLeft="3dp"
            android:text="@string/bank_transfer"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/etBank"
            style="@style/TextInputLayout_Input"
            app:tint="@color/tintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_down"
            android:drawableRight="@drawable/ic_chevron_down"
            android:focusable="false"
            app:layout_constraintLeft_toLeftOf="@+id/tvCreateRemb"
            app:layout_constraintRight_toRightOf="@+id/tvCreateRemb"
            android:hint="@string/select_bank"
            android:editable="false"
            android:inputType="none"
            android:includeFontPadding="true"
            android:paddingBottom="20dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/labelBank"
            tools:text="Bank Mandiri" />

        <TextView
            android:id="@+id/labelTrip"
            style="@style/ContentDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tvCreateRemb"
            android:layout_marginTop="20dp"
            android:text="@string/trip_code"
            android:layout_marginLeft="3dp"
            app:layout_constraintTop_toBottomOf="@+id/etBank" />

        <EditText
            android:id="@+id/etTripCode"
            style="@style/TextInputLayout_Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_down"
            android:drawableRight="@drawable/ic_chevron_down"
            app:layout_constraintLeft_toLeftOf="@+id/tvCreateRemb"
            app:layout_constraintRight_toRightOf="@+id/tvCreateRemb"
            android:hint="@string/select_trip_code"
            android:text="@{viewModel.selectedCode}"
            android:focusable="false"
            android:editable="false"
            android:inputType="none"
            android:includeFontPadding="true"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textAppearance="@style/TextInputLayout_Input"
            app:layout_constraintTop_toBottomOf="@+id/labelTrip" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/select_button_yellow"
            android:text="@string/next"
            app:layout_constraintLeft_toLeftOf="@+id/tvCreateRemb"
            app:layout_constraintRight_toRightOf="@+id/tvCreateRemb"
            android:textAppearance="@style/TextButtonStyle"
            android:enabled="@{viewModel.buttonNextEnabled}"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
