<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#f8e3bb"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvReadmore"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="1:0.9"
        android:background="@drawable/bg_mask_virus"/>
    <TextView
        android:id="@+id/tvImportant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_important_notice"
        android:layout_marginTop="15dp"
        style="@style/SubtitleTextStyle"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/lato_black"
        android:textStyle="normal"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvDescImportant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextStyle"
        android:textColor="#666666"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="135dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvImportant"
        android:text="@string/txt_updated_information_for"/>

    <TextView
        android:id="@+id/tvReadmore"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_read_more"
        android:textStyle="bold"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescImportant"
        />

    <TextView
        android:id="@+id/tvWonderfull"
        style="@style/SubtitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:drawableRight="@drawable/ic_chevron_right_9dp"
        android:text="@string/txt_wonderful_indonesia"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContentDescriptionTextStyle"
        android:textColor="#666666"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWonderfull"
        android:text="@string/txt_recommendations_guide_for_travel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>