<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="22sp"
            style="@style/RobotoBold"
            android:textColor="#24253d"
            android:text="@string/sorry2" />
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            style="@style/RobotoRegular"
            android:textColor="#52575c"
            android:text="@string/contact_hr" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="#91929e"
            android:gravity="center_horizontal"
            android:text="" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/ok"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="end"
            style="@style/ButtonStyle" />

    </LinearLayout>
</RelativeLayout>