<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5">

        <ImageView
            android:id="@+id/img_airline"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="10dp"
            android:layout_width="30dp"
            android:layout_height="22dp"
            android:background="@color/black"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp">
        </ImageView>

        <TextView
            android:id="@+id/tv_airline_name"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#24253d"
            android:text="@string/flightRoute"
            android:layout_toRightOf="@+id/img_airline"/>

        <TextView
            style="@style/RobotoBold"
            android:id="@+id/tvPickSsr"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#009688"
            android:gravity="end"
            android:text="@string/change"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

    <TextView
        style="@style/RobotoRegular"
        android:id="@+id/tvSelectedSsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#24253d"
        android:text="@string/selectedSsr"
        android:layout_marginStart="30dp" />

</LinearLayout>