<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_default"
    android:layout_marginRight="@dimen/margin_default"
    android:layout_marginTop="32dp"
    android:paddingBottom="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/personal_trip"
        android:gravity="center"
        android:textSize="16sp"
        style="@style/TextLato_Bold"/>
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="6sp"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        style="@style/TextLato_Normal"
        android:textColor="#888888"
        android:text="@string/txt_enjoy_the_new_exprience"/>

    <LinearLayout
        android:id="@+id/btnFlight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rect_rounded"
        android:backgroundTint="@color/bgIconPlaneHome"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btnHotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc">

        <ImageView
            android:layout_width="@dimen/size_image_btn_second_content"
            android:layout_height="@dimen/size_image_btn_second_content"
            android:background="@drawable/ic_flight_up_white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_flight"
            android:layout_marginTop="3dp"
            style="@style/SubtitleTextStyle"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHotel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rect_rounded"
        android:backgroundTint="@color/bgIconHotelHome"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btnTrain"
        app:layout_constraintStart_toEndOf="@+id/btnFlight"
        app:layout_constraintTop_toTopOf="@+id/btnFlight">

        <ImageView
            android:layout_width="@dimen/size_image_btn_second_content"
            android:layout_height="@dimen/size_image_btn_second_content"
            android:src="@drawable/ic_hotel_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_hotel"
            style="@style/SubtitleTextStyle"
            android:layout_marginTop="3dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTrain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rect_rounded"
        android:backgroundTint="@color/bgIconTrainHome"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHotel"
        app:layout_constraintTop_toTopOf="@+id/btnFlight">

        <ImageView
            android:layout_width="@dimen/size_image_btn_second_content"
            android:layout_height="@dimen/size_image_btn_second_content"
            android:src="@drawable/ic_train_white" />

        <TextView
            style="@style/SubtitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_train"
            android:layout_marginTop="3dp"
            android:textColor="@color/white" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>